[gd_scene load_steps=3 format=2]

[ext_resource path="res://MainGame.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI.gd" type="Script" id=2]

[node name="UI" type="Control"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -308.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainGame" parent="." instance=ExtResource( 1 )]

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 300, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 301.0
margin_bottom = 593.0

[node name="GameDetails" type="Label" parent="PanelContainer/VBoxContainer"]
margin_right = 294.0
margin_bottom = 14.0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 294.0
margin_bottom = 32.0

[node name="TurnLabel" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_right = 36.0
margin_bottom = 14.0
text = "Turn: "

[node name="TurnNo" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 40.0
margin_right = 40.0
margin_bottom = 14.0

[node name="TurnsTabber" type="TabContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 294.0
margin_bottom = 510.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 514.0
margin_right = 294.0
margin_bottom = 534.0
alignment = 1

[node name="SaveGame" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
margin_left = 72.0
margin_right = 113.0
margin_bottom = 20.0
text = "Save"

[node name="prevTurn" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
margin_left = 117.0
margin_right = 142.0
margin_bottom = 20.0
text = "<-"

[node name="nextTurn" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
margin_left = 146.0
margin_right = 171.0
margin_bottom = 20.0
text = "->"

[node name="CloseGame" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
margin_left = 175.0
margin_right = 222.0
margin_bottom = 20.0
text = "Close"

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 538.0
margin_right = 294.0
margin_bottom = 562.0

[node name="Path" type="LineEdit" parent="PanelContainer/VBoxContainer/HBoxContainer3"]
margin_right = 185.0
margin_bottom = 24.0
size_flags_horizontal = 3
align = 3

[node name="Search" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer3"]
margin_left = 189.0
margin_right = 248.0
margin_bottom = 24.0
text = "Browse"
align = 2

[node name="Load" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer3"]
margin_left = 252.0
margin_right = 294.0
margin_bottom = 24.0
text = "Load"
align = 2

[node name="QuitButton" type="Button" parent="PanelContainer/VBoxContainer"]
margin_top = 566.0
margin_right = 294.0
margin_bottom = 586.0
text = "Quit"

[node name="FileDialog" type="FileDialog" parent="."]
margin_right = 416.0
margin_bottom = 184.0
rect_min_size = Vector2( 400, 140 )
window_title = "Open a File"
mode = 0
access = 2
filters = PoolStringArray( "*.pgn" )
current_dir = "/home/jacob/ChessRender"
current_path = "/home/jacob/ChessRender/"

[node name="ErrorPopup" type="WindowDialog" parent="."]
margin_right = 48.0
margin_bottom = 40.0
window_title = "Error"

[node name="ErrorMessage" type="Label" parent="ErrorPopup"]
anchor_right = 1.0
anchor_bottom = 1.0
align = 1
valign = 1
[connection signal="branch" from="MainGame" to="." method="new_game"]
[connection signal="new_turn" from="MainGame" to="." method="new_turn"]
[connection signal="turn_updated" from="MainGame" to="." method="update_turn"]
[connection signal="error" from="MainGame/Board" to="." method="_error"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer2/SaveGame" to="." method="_on_SaveGame_pressed"]
[connection signal="button_up" from="PanelContainer/VBoxContainer/HBoxContainer2/prevTurn" to="." method="_on_prevTurn_button_up"]
[connection signal="button_up" from="PanelContainer/VBoxContainer/HBoxContainer2/nextTurn" to="." method="_on_nextTurn_button_up"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer2/CloseGame" to="." method="_on_CloseGame_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer3/Search" to="." method="_on_Search_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer3/Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/QuitButton" to="." method="quit"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]

[editable path="MainGame"]
